--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,28 @@ body {
 
 .container {
   width: 75%;
-  margin: auto; }
+  margin: auto;
+  margin-bottom: 20px; }
 
 h1, h2 {
   color: #ffa500;
   text-align: center; }
+
+h1 small, h2 small {
+  color: #ffa500; }
 
 p {
   color: #ffffff; }
 
 .hidden {
   display: none; }
+
+.start-btn {
+  text-align: center;
+  margin-bottom: 40px; }
+
+.strike-btn {
+  display: inline-block;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 40px; }
