--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,11 +6,16 @@ body {
 .container {
   width: 75%;
   margin: auto;
+  margin-bottom: 20px;
 }
 
 h1, h2 {
   color: #ffa500;
   text-align: center;
+}
+
+h1 small, h2 small {
+  color: #ffa500;
 }
 
 p {
@@ -19,4 +24,16 @@ p {
 
 .hidden {
   display: none;
+}
+
+.start-btn {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.strike-btn {
+  display: inline-block;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 40px;
 }
