--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: rgba(80,80,80,1);
 }
 
 .container {
@@ -31,9 +32,11 @@ p {
   margin-bottom: 40px;
 }
 
-.strike-btn {
-  display: inline-block;
-  margin: auto;
+.strike-btns {
   text-align: center;
   margin-bottom: 40px;
+}
+
+a {
+  display: none;
 }
